# biodata-registry-sandbox

./: README.md  docker-compose.yml
api/: Dockerfile  README.md  openapi.json  pyproject.toml
api/src/aind_registry_service_api/: configs.py  main.py  models.py  route.py  session.py
api/src/aind_registry_service_api/routes/: acquisition_specimens.py  acquisition_subjects.py  acquisitions.py  collection_data_assets.py  collections.py  data_assets.py  healthcheck.py  instruments.py  organization_admins.py  organizations.py  process_inputs.py  process_outputs.py  processes.py  quality_control.py  schema_entities.py  schemas.py  space_admins.py  spaces.py  specimen_procedure_inputs.py  specimen_procedure_outputs.py  specimen_procedures.py  specimens.py  subject_procedure_outputs.py  subject_procedures.py  subjects.py  users.py
api/src/biodata_registry_api/: configs.py  main.py  session.py
api/src/biodata_registry_api/models/: __init__.py  admin.py  core.py  link_tables.py  views.py
api/src/biodata_registry_api/models/crud/: __init__.py  admin.py  core.py  views.py
api/src/biodata_registry_api/routes/: __init__.py  acquisitions.py  collections.py  data_assets.py  healthcheck.py  instruments.py  organization_admins.py  organizations.py  processes.py  quality_controls.py  schema_entities.py  schemas.py  space_admins.py  spaces.py  specimen_procedures.py  specimens.py  subject_procedures.py  subjects.py  users.py  views.py
api/templates/: crud_template.py.j2  dump_sql.py  generate_api_spec.py  generate_routes.py  open_api_configs.json  openapi.json
api/tests/: conftest.py  test_routes.py
client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
cron_job/: Dockerfile  backfill_mongodb.py  requirements.txt
examples/: api_helpers.py  connect_directly.py  generate_quality_control_schema.py  generate_specimen_procedures_schema.py  generate_subject_procedures_schema.py  populate_database.py  populate_database_v2.py  (+3 more)
(+305 files in other folders)
