[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "biodata-registry-api"
description = "Package to serve data from registry."
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'aind-settings-utils>=0.1.0',
    'fastapi[standard]>=0.114.0',
    'sqlmodel',
    'pydantic>=2.0',
    'pydantic-xml',
    'asyncpg',
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo',
    'pytest',
    'pytest-env',
    'pytest_asyncio',
    'toml',
    'Jinja2'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "biodata_registry_api.__version__"}

[tool.black]
line-length = 79
target_version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | env
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["biodata_registry_api", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "^from .* import .*",
    "^import .*",
    "pragma: no cover"
]
fail_under = 10

[tool.isort]
line_length = 79
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build", "env"]
fail-under = 100

[tool.pytest.ini_options]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"
env = [
    "REGISTRY_HOST=reg_host",
    "REGISTRY_PASSWORD=reg_password",
    "REGISTRY_USER=reg_user",
    "REGISTRY_PORT=123",
    "REGISTRY_DATABASE=reg_db",
]
